fixes in dark mode

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 /*--styling of the toggle-button theme---*/
 
 [data-theme="dark"] {
-  background-color: #01011b;
+  background-color: #19041b;
   color: black;
 }
 
